--- a/main.css
+++ b/main.css
@@ -1,94 +1,99 @@
+:root {
+  font-size: 32px;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Avenir Next", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 32px;
+  font-size: 1em;
   background-color: #fcfcfc;
   color: #333;
 }
 
-.jumbotron {
+.hero {
   margin-top: 5%;
   text-align: center;
 }
 
-.jumbotron > .title {
-  color: black;
+.hero > .brand {
+  color: #000;
   font-size: 2em;
   letter-spacing: -0.05em;
 }
 
-.jumbotron > .title > .sep {
+.hero > .brand > .sep {
   color: #24d;
 }
 
-.jumbotron > .title > em {
+.hero > .brand > em {
   font-style: normal;
   color: #999;
 }
 
-.jumbotron > .description {
+.hero > .tagline {
   color: #666;
   font-weight: 300;
   letter-spacing: 0.025em;
 }
 
-.jumbotron > .strip {
-  margin-top: 48px;
+.hero > .stripe {
+  margin-top: 0.75rem;
   padding: 2.5em;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: #f4f4f4;
+  border-top: 1px solid #e8e8e8;
+  border-bottom: 1px solid #e8e8e8;
+  background-color: #f8f8f8;
   font-size: 0.45em;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.075em;
 }
 
-.jumbotron > .strip > .quote {
+.hero > .stripe > .quote {
   color: #d24
 }
 
-.jumbotron > .strip > .op {
+.hero > .stripe > .op {
   color: #24a;
 }
 
-.jumbotron > .controls {
-  margin-top: 24px;
+.hero > .controls {
+  margin-top: 0.5rem;
 }
 
-.jumbotron > .controls > a.btn, .jumbotron > .controls > a.btn:visited  {
+.hero > .controls > a.btn, .hero > .controls > a.btn:visited  {
   font-size: 0.5em;
   font-weight: normal;
   padding: 0.75em 1.25em;
-  border: 1px solid #ccc;
+  border: 1px solid #37e;
   border-radius: 4px;
   background-color: #26d;
   color: #fff;
   text-decoration: none;
 }
 
-.jumbotron > .controls > a.btn:hover  {
+.hero > .controls > a.btn:hover  {
   background-color: #2f6fdf;
   cursor: pointer;
 }
 
-.jumbotron > .controls > a.btn:active  {
+.hero > .controls > a.btn:active  {
   background-color: #37e;
 }
 
-.jumbotron > .controls > a.btn.btn-alt, .jumbotron > .controls > a.btn.btn-alt:visited {
+.hero > .controls > a.btn.btn-alt, .hero > .controls > a.btn.btn-alt:visited {
+  border: 1px solid #ccc;
   background-color: #fcfcfc;
   color: #333;
 }
 
-.jumbotron > .controls > a.btn.btn-alt:hover  {
+.hero > .controls > a.btn.btn-alt:hover  {
   background-color: #f0f0f0;
   cursor: pointer;
 }
 
-.jumbotron > .controls > a.btn.btn-alt:active  {
+.hero > .controls > a.btn.btn-alt:active  {
   background-color: #eee;
 }
 
-.jumbotron > .controls > a + a {
+.hero > .controls > a.btn + a.btn {
   margin-left: 1em;
 }
